{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 149,
  "lineage": "1d2d24db-7a6b-a243-9e34-68edc91fa16f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-039fa6f1e9b5ccc22",
            "description": "Allow traffic for a cluster",
            "filter": null,
            "id": "sg-039fa6f1e9b5ccc22",
            "name": "cluster-sg",
            "tags": {
              "Name": "cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "node_grp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-0b4edc052fbdfb85b",
            "description": "Allow traffic for a node group",
            "filter": null,
            "id": "sg-0b4edc052fbdfb85b",
            "name": "node-grp-sg",
            "tags": {
              "Name": "node-grp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "raku_pub01_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-08a6d7b1273db2c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a6d7b1273db2c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "raku-pub01-2a"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "raku_pvt01_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-086a24fc6aaa7afd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086a24fc6aaa7afd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "raku-pvt01-2c"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "raku_pvt02_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-0bed4ba59f8b847a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed4ba59f8b847a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "raku-pvt02-2a"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "raku_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:vpc/vpc-045dfcc38082aa6bf",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0756fb1dabc73aaac",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a9c73d1efbecd645",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045dfcc38082aa6bf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00484113c85b1a248",
            "owner_id": "941377151595",
            "tags": {
              "Name": "raku-vpc"
            }
          }
        }
      ]
    }
  ]
}